Fixed #123672: RTF - kword doesn't recognize lang/charset settings

BUG: 123672

svn path=/trunk/koffice/; revision=519289